Handle subdirs in scripts/replace-md-links.sh.

--- a/test-site/index.html
+++ b/test-site/index.html
@@ -9,3 +9,6 @@ corresponding HTML file exists.</p>
 
 <p><a href="replaced.md">This link</a> should be replaced because the
 corresponding HTML file exists.</p>
+
+<p><a href="subdir/a.md">This link</a> should be replaced because the
+corresponding HTML file exists.</p>
